# coordinator/models/apimod/model_cpu_stat_info.go
@@ -1,0 +1,15 @@
+/*
+ * OpenHPC
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package apimod
+
+type CpuStatInfo struct {
+
+	AvgLoad float32 `json:"avg_load"`
+}
