# coordinator/models/apimod/model_gpu_stat_info.go
@@ -1,0 +1,21 @@
+/*
+ * OpenHPC
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package apimod
+
+type GpuStatInfo struct {
+
+	Name string `json:"name"`
+
+	Mem MemStatInfo `json:"mem"`
+
+	MemUtil int32 `json:"mem_util"`
+
+	Util int32 `json:"util"`
+}
