# coordinator/models/apimod/model_mem_stat_info.go
@@ -1,0 +1,19 @@
+/*
+ * OpenHPC
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package apimod
+
+type MemStatInfo struct {
+
+	Used int32 `json:"used"`
+
+	Total int32 `json:"total"`
+
+	Unit string `json:"unit"`
+}
