# coordinator/models/apimod/model_stat_info.go
@@ -1,0 +1,19 @@
+/*
+ * OpenHPC
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package apimod
+
+type StatInfo struct {
+
+	Gpu []GpuStatInfo `json:"gpu"`
+
+	Cpu CpuStatInfo `json:"cpu"`
+
+	Mem MemStatInfo `json:"mem"`
+}
